<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.lenovo.busq.IndexActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#990066"
            android:layout_marginTop="135dp"
            android:layout_marginBottom="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/map"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/bt_map"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn"/>
                <Button
                    android:id="@+id/line"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/bt_line"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/btn"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/station"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/bt_station"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn"/>
                <Button
                    android:id="@+id/trans"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/bt_trans"
                    android:background="@drawable/btn"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
